# atena-lang

./: .gitignore  CLAUDE.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/00-diagnostics-spine-data-contracts/: 00-01-PLAN.md  00-01-SUMMARY.md  00-02-SUMMARY.md  00-03-PLAN.md  00-03-SUMMARY.md  00-04-SUMMARY.md  00-05-PLAN.md  00-CONTEXT.md  00-REVIEW.md  00-SECURITY.md  00-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: CNAME  index.html
examples/: 01-show.atena  02-ask.atena  03-variables.atena  04-conditionals.atena  05-while.atena  06-repeat.atena  07-functions.atena  08-lists.atena  09-dicts.atena  school.atena
src/atena/: __main__.py  analyzer.py  ast_nodes.py  cli.py  codegen.py  errors.py  lexer.py  parser.py  pipeline.py  tokens.py
tests/: conftest.py  test_analyzer.py  test_ast_nodes.py  test_cli.py  test_cli_runtime_lines.py  test_codegen.py  test_errors.py  test_examples.py  test_imports.py  test_lexer.py  test_parser.py  test_pipeline.py  test_pipeline_tdd.py  test_tokens.py
tests/fixtures/: concat_helper.atena  concat_helper.expected.py  dict_dot_write.atena  dict_dot_write.expected.py  dynamic_index.atena  dynamic_index.expected.py  keyword_mangle.atena  keyword_mangle.expected.py  nested_repeat.atena  nested_repeat.expected.py  school.expected.py
(+92 files in other folders)
